Direct download BuildManifest if available, minor code cleanup